--- a/lesson_5(todo)/css/style.css
+++ b/lesson_5(todo)/css/style.css
@@ -2,20 +2,40 @@
     padding: 0;
     margin: 0;
     font-family: opensans, Arial, serif;
-
 }
 body{
-    background: url("../images/bg.png") no-repeat;
-    background-size: cover;
+
 }
 header{
-    padding: 20px 50px;
+    background: url("../images/header_bg.png") repeat-x;
+    height: 156px;
     text-align: center;
+}
+#geetHubJS6{
+    background: url("../images/geekhubJs6.png") no-repeat;
+    background-position: center ;
+    height: 57px;
+    padding-top: 10px;
+}
+header h2{
+    margin-top: 40px;
+}
+
+header h2 a{
+    color: #E5E5E5;
 }
 
 main{
+    background: url("../images/bg.png") no-repeat;
+    background-size: cover;
+    min-width: 660px;
     text-align: center;
     min-height: 700px;
+}
+h1{
+    font: 24px/24px Arial, center;
+    color: #1F1F1F;
+    padding-top: 20px;
 }
 .part1{
     background: url("../images/part11.png") no-repeat;
@@ -63,5 +83,20 @@ input[type="text"]{
     background: url("../images/part21_done_archiv.png") no-repeat;
     background-position: center ;
     height: 20px;
+}
+
+footer{
+    background: url("../images/footer_bg.png") repeat-x;
+    height: 72px;
+    text-align: center;
+}
+
+footer p{
+    font: 14px/14px Arial, sans-serif;
+    color: #E5E5E5;
+    padding-top: 15px;
+}
+footer p a{
+    color: #E5E5E5;
 }
 
