--- a/lesson_5_todoList/css/style.css
+++ b/lesson_5_todoList/css/style.css
@@ -41,6 +41,7 @@ h1{
 .wrapper{
     width: 560px;
     margin: 0px auto;
+    font-size: 16px;
 }
 .part1{
     background: url("../images/part11.png") no-repeat;
@@ -57,6 +58,10 @@ h1{
     background: url("../images/part31.png") no-repeat;
     background-position: center ;
     height: 251px;
+}
+.onfocus{
+    font-style: italic;
+    font-size: 16px;
 }
 
 .button_position1{
