--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,15 @@
   transition-timing-function: ease-in-out
   transition-delay: 0s
 
+=shadow
+  box-shadow: 0 3px 20px rgba(0,0,0,.25), inset 0 2px 0 rgba(255,255,255,.6), 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
+  -moz-box-shadow: 0 3px 20px rgba(0,0,0,.25), inset 0 2px 0 rgba(255,255,255,.6), 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
+  -webkit-box-shadow: 0 3px 20px rgba(0,0,0,.25), inset 0 2px 0 rgba(255,255,255,.6), 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
+
+=shadow-hover
+  box-shadow: inset 0 0 20px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4),inset 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
+  -moz-box-shadow: inset 0 0 20px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4),inset 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
+  -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4),inset 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
 
 
 //-----------------body----------------------//
@@ -37,6 +46,7 @@ main
   background: #ffffff
   border-radius: 30px 10px
   opacity: 0.8
+  +shadow
 
 //--//-----------navigation-------------------//
 #block-1
@@ -51,14 +61,17 @@ main
 
 .nav ul li
   background: #1195D5
-  margin: 1px
+  margin: 2px
   +transition-animation
+  +shadow
 
 .nav ul li:last-child
   border-bottom-right-radius: 20px
 
 .nav ul li:hover
   background: #2fc5ff
+  +shadow-hover
+
 
 .nav ul li:hover:last-child
   border-bottom-right-radius: 20px
