--- a/sass/style.css
+++ b/sass/style.css
@@ -45,6 +45,9 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block; }
 
+* {
+  box-sizing: border-box; }
+
 body {
   background: #ECF1F5; }
 
@@ -60,17 +63,81 @@ header {
   margin: 6px 86px; }
 
 main {
+  min-height: 610px;
   margin-top: -60px;
   margin-left: 50px;
   margin-right: 50px;
+  margin-bottom: 20px;
   padding: 0 30px;
   min-width: 900px;
   background: #ffffff;
   border-radius: 30px 10px;
-  opacity: 0.8;
+  opacity: 0.9;
   box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
+
+#main-menu {
+  padding-top: 4px;
+  opacity: 1;
+  position: absolute; }
+
+#main-menu ul li {
+  display: inline-block;
+  height: 50px;
+  width: 135px;
+  overflow: hidden;
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s; }
+
+#lessons ul li:hover {
+  width: 265px;
+  height: 470px; }
+
+#lessons ul li a {
+  display: block;
+  width: 265px;
+  height: 40px;
+  line-height: 40px;
+  background: #5C544F;
+  margin: 2px;
+  color: #ffffff;
+  padding-left: 15px;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: "PT Sans", Tahoma, Arial;
+  font-size: 1em;
+  text-transform: uppercase;
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
+
+#lessons ul li a:hover {
+  background: #2fc5ff;
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
+
+#lessons ul li a:first-child {
+  font-size: 1.2em;
+  height: 50px;
+  line-height: 50px;
+  position: relative; }
+
+.github {
+  display: inline-block; }
 
 #block-1 {
   width: 280px;
@@ -79,8 +146,7 @@ main {
 
 .nav {
   list-style: none;
-  margin: 30px 0;
-  text-transform: uppercase; }
+  margin: 30px 0; }
 
 .nav ul li {
   background: #1195D5;
@@ -118,11 +184,13 @@ main {
   cursor: pointer;
   text-decoration: none;
   font-family: "PT Sans", Tahoma, Arial;
-  font-size: 1em; }
+  font-size: 1em;
+  text-transform: uppercase; }
 
 #block-2 {
-  height: 428px;
-  padding-top: 60px; }
+  min-height: 610px;
+  padding-top: 60px;
+  margin: 0px auto; }
 
 #block-2 h1 {
   font-family: "PT Sans", Tahoma, Arial;
