--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,8 @@
 @import "compass/reset"
 
+*
+  box-sizing: border-box // wtf
+
 =transition-animation
   -webkit-transition: all .5s ease-in-out 0s
   -moz-transition: all .5s ease-in-out 0s
@@ -19,6 +22,11 @@
   -moz-box-shadow: inset 0 0 20px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4),inset 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
   -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4),inset 0 2px 0 rgba(0,0,0,.1), inset 0 0 20px rgba(0,0,0,.1)
 
+=text-menu
+  text-decoration: none
+  font-family: 'PT Sans', Tahoma, Arial
+  font-size: 1em
+  text-transform: uppercase
 
 //-----------------body----------------------//
 body
@@ -38,17 +46,70 @@ header
 
 //-----------------main-------------------------//
 main
+  min-height: 610px
   margin-top: -60px
   margin-left: 50px
   margin-right: 50px
+  margin-bottom: 20px
   padding: 0 30px
   min-width: 900px
   background: #ffffff
   border-radius: 30px 10px
-  opacity: 0.8
+  opacity: 0.9
   +shadow
 
 //--//-----------navigation-------------------//
+//--//--//-------main menu--------------------//
+#main-menu
+  padding-top: 4px
+  opacity: 1
+  position: absolute
+
+#main-menu ul li
+  display: inline-block
+  height: 50px
+  width: 135px
+  overflow: hidden
+  +transition-animation
+
+#lessons ul li:hover
+  width: 265px
+  height: 470px
+
+#lessons ul li a
+  display: block
+  width: 265px
+  height: 40px
+  line-height: 40px
+  background: #5C544F
+  margin: 2px
+  color: #ffffff
+  padding-left: 15px
+  cursor: pointer
+  +text-menu
+  +transition-animation
+  +shadow
+
+#lessons ul li a:hover
+  background: #2fc5ff
+  +shadow-hover
+
+#lessons ul li a:first-child
+  font-size: 1.2em
+  height: 50px
+  line-height: 50px
+  position: relative
+
+.github
+  display: inline-block
+
+
+
+
+
+
+
+//--//--//--------block-1-------------------//
 #block-1
   width: 280px
   float: left
@@ -57,7 +118,7 @@ main
 .nav
   list-style: none
   margin: 30px 0
-  text-transform: uppercase
+
 
 .nav ul li
   background: #1195D5
@@ -84,15 +145,18 @@ main
   color: #ffffff
   padding-left: 15px
   cursor: pointer
-  text-decoration: none
-  font-family: 'PT Sans', Tahoma, Arial
-  font-size: 1em
+  +text-menu
+
 
 
 //--//-----------block-2-----------------------//
 #block-2
-  height: 428px
+  min-height: 610px
   padding-top: 60px
+  margin: 0px auto
+  //float: right
+
+
 
 #block-2 h1
   font-family: 'PT Sans', Tahoma, Arial
