--- a/barley-break/sass/barley-break.css
+++ b/barley-break/sass/barley-break.css
@@ -1,5 +1,5 @@
 main {
-  min-width: 500px; }
+  min-width: 683px; }
 
 h1 {
   height: 100px !important;
@@ -11,7 +11,21 @@ h1 {
   height: 192px;
   margin: 0 auto; }
 
-.wrapper-content {
+.wrapper {
+  width: 623px;
+  height: 332px;
+  margin: 0 auto; }
+
+.column-1 {
+  width: 333px;
+  float: left;
+  margin-right: 40px; }
+
+.column-2 {
+  width: 250px;
+  float: left; }
+
+.content {
   margin: 0 auto;
   padding: 30px;
   width: 333px;
@@ -42,11 +56,14 @@ h1 {
   -moz-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
 
+.score {
+  font: 18px/18px "PT Sans", Tahoma, Arial; }
+
 .cheat {
-  font: 18px/18px Arial;
+  font: 18px/18px "PT Sans", Tahoma, Arial;
   height: 38px;
   width: 200px;
-  margin: 15px auto;
+  margin: 15px 0;
   line-height: 38px;
   background: #FDFEFE; }
 
@@ -66,5 +83,41 @@ h1 {
 
 .cheat span:hover {
   cursor: pointer; }
+
+.newGame {
+  font: 18px/18px "PT Sans", Tahoma, Arial;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  border: none;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
+
+.newGame:hover {
+  background: #ff2800;
+  color: #ffffff;
+  cursor: pointer;
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s; }
+
+.newGame:active {
+  outline: none; }
+
+.newGame:visited {
+  outline: none; }
+
+.newGame:focus {
+  outline: none; }
 
 /*# sourceMappingURL=barley-break.css.map */
