--- a/sass/style.css
+++ b/sass/style.css
@@ -68,7 +68,7 @@ main {
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 20px;
-  padding: 0 30px;
+  padding: 0 30px 30px 30px;
   min-width: 900px;
   background: #ffffff;
   border-radius: 30px 10px;
