--- a/sass/style.css
+++ b/sass/style.css
@@ -77,16 +77,16 @@ main {
   -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
 
-#main-menu {
-  padding-top: 4px;
-  opacity: 1;
-  position: absolute; }
-
 #main-menu ul li {
-  display: inline-block;
+  float: left;
+  position: relative;
+  width: 29.26%;
   height: 50px;
-  width: 135px;
-  overflow: hidden;
+  line-height: 50px;
+  background: #625754;
+  padding: 0 20px;
+  margin: 5px 2%;
+  border-radius: 30px;
   -webkit-transition: all 0.5s ease-in-out 0s;
   -moz-transition: all 0.5s ease-in-out 0s;
   -o-transition: all 0.5s ease-in-out 0s;
@@ -95,49 +95,63 @@ main {
   transition-timing-function: ease-in-out;
   transition-delay: 0s; }
 
-#lessons ul li:hover {
-  width: 265px;
-  height: 470px; }
+#main-menu ul li:hover {
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  background: #C4B9B6; }
 
-#lessons ul li a {
-  display: block;
-  width: 265px;
+#main-menu ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  font-family: "PT Sans", Tahoma, Arial;
+  font-size: 1em;
+  text-transform: uppercase; }
+
+#main-menu .nav-dropdown {
+  position: absolute;
+  top: 100%;
+  display: none; }
+
+#main-menu ul li:hover .nav-dropdown {
+  display: block; }
+
+#main-menu .nav-dropdown li {
   height: 40px;
   line-height: 40px;
-  background: #5C544F;
-  margin: 2px;
+  width: 250px;
+  padding: 0px;
+  margin: 0px; }
+
+#main-menu .nav-dropdown li:first-child {
+  margin-top: 5px; }
+
+#main-menu .nav-dropdown li a {
   color: #ffffff;
-  padding-left: 15px;
-  cursor: pointer;
+  padding: 0 10px;
+  margin: 0;
   text-decoration: none;
   font-family: "PT Sans", Tahoma, Arial;
   font-size: 1em;
   text-transform: uppercase;
+  display: block;
+  cursor: pointer;
+  height: 40px;
+  line-height: 40px;
+  background: #897E7B;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.5s ease-in-out 0s;
   -moz-transition: all 0.5s ease-in-out 0s;
   -o-transition: all 0.5s ease-in-out 0s;
   transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
-  transition-delay: 0s;
-  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.25), inset 0 2px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
+  transition-delay: 0s; }
 
-#lessons ul li a:hover {
-  background: #2fc5ff;
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.2), 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 0 20px rgba(0, 0, 0, 0.1); }
-
-#lessons ul li a:first-child {
-  font-size: 1.2em;
-  height: 50px;
-  line-height: 50px;
-  position: relative; }
-
-.github {
-  display: inline-block; }
+#main-menu .nav-dropdown li a:hover {
+  background: #C4B9B6; }
 
 #block-1 {
   width: 280px;
