--- a/sass/style.sass
+++ b/sass/style.sass
@@ -159,6 +159,7 @@ main
   min-height: 700px
   padding-top: 60px
   margin: 0px auto
+  display: table
 
 #block-2 h1
   font-family: 'PT Sans', Tahoma, Arial
