--- a/toDoList_JQuery/sass/style-todolist-jquery.css
+++ b/toDoList_JQuery/sass/style-todolist-jquery.css
@@ -1,4 +1,4 @@
-.content {
+.wrapper-content {
   width: 800px;
   margin: 0 auto; }
 
@@ -102,7 +102,7 @@
   border: none; }
 
 #add-button {
-  width: 19.5%;
+  width: 19%;
   padding: 0;
   margin: 0;
   border: none;
