--- a/toDoList_JQuery/sass/style-todolist-jquery.sass
+++ b/toDoList_JQuery/sass/style-todolist-jquery.sass
@@ -1,11 +1,14 @@
 $font-stack: 24px/24px Arial
 
-.content
+
+.wrapper-content
   width: 800px
   margin: 0 auto
 
+
 #list
   font: $font-stack
+
 
 .task
   position: relative
@@ -104,7 +107,7 @@ $font-stack: 24px/24px Arial
   border: none
 
 #add-button
-  width: 19.5%
+  width: 19%
   padding: 0
   margin: 0
   border: none
